# rs_virtual_pet

./: CHANGELOG.md  Cargo.toml
.github/workflows/: rust-release.yml
src/: lib.rs  main.rs  pet.rs
tests/: main.rs
