[package]
name = "virtual_pet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
terminal_size = "0.2.1"
figlet-rs = "0.1.5"
colored = "2.0.0"

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1